--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         </div>
       </div>
       <div class="code-wrapper">
-        <textarea rows="2"></textarea>
-        <button>Copy</button>
+        <textarea id="code" rows="2"></textarea>
+        <button onclick="copyCode()">Copy</button>
       </div>
     </div>
 
